// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tools/list contract > matches the core profile snapshot 1`] = `
[
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List the built-in role templates that delegate and job_submit accept. Call this first when you want a one-shot agent and do not already have an agentId. Use agent_create to define a persistent agent of your own instead.",
    "name": "agent_template_list",
    "title": "List agent templates",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Queue work for an agent and return a handle immediately, without waiting for the result. Use it for long work, for fan-out you will collect later, or when the job depends on others finishing first; use delegate when you just want one answer now. Follow up with job_wait and job_get.",
    "name": "job_submit",
    "title": "Submit a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Fetch one job with its state, result and usage. The shape is identical whether the work ran locally or on a remote agent. Use job_wait first if the job may still be running, and events_query for the step-by-step trail.",
    "name": "job_get",
    "title": "Get a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Block until the given jobs finish, or until the timeout expires — at most 60 seconds per call. Call it again if the jobs are still running; it never blocks longer than the protocol allows. Use job_get when you only want the current state without waiting.",
    "name": "job_wait",
    "title": "Wait for jobs",
  },
  {
    "annotations": {
      "destructiveHint": true,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Cancel a queued or running job; for remote jobs this cancels the underlying A2A task too. Already-finished jobs are returned unchanged. Use job_retry to run a cancelled job again.",
    "name": "job_cancel",
    "title": "Cancel a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": true,
      "readOnlyHint": false,
    },
    "description": "Run one instruction on the best-matching agent and return the result. This is the everyday tool: reach for it whenever you want a sub-agent to do something and hand the answer back. Use job_submit instead when the work is long, has dependencies, or should run in the background, and agent_template_list to see the roles you can target.",
    "name": "delegate",
    "title": "Delegate an instruction",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": true,
      "readOnlyHint": false,
    },
    "description": "Run the same instruction over many items in parallel, optionally reducing the results with a final step. Use it for per-file review, per-record extraction, or any map-style workload; use delegate for a single item. Concurrency is capped by the orchestrator and by any budget you set.",
    "name": "fan_out",
    "title": "Fan out over items",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Read an artifact by id, with offset and length for large content. Check eof to know whether more remains. Use artifact_list to find the id.",
    "name": "artifact_get",
    "title": "Read an artifact",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List approval gates waiting on a human. Only a workflow step marked approval: true creates one today — a downstream tool marked requireApprovalFor fails the call outright rather than pausing for a human, and an unverified remote agent card is only ever allowed or blocked by A2A_TRUST_MODE, never gated here. Check this when a workflow run is paused. Resolve them with approval_resolve.",
    "name": "approval_list",
    "title": "List approvals",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Approve or reject a pending gate, optionally with a comment or edited input. Approving a paused workflow step resumes the run on the next tick. An approval can only be resolved once.",
    "name": "approval_resolve",
    "title": "Resolve an approval",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Report orchestrator health, version, active tool profile, queue depth and schema state. Use it to confirm the server is reachable and correctly configured, or to check whether migrations are pending. Not for inspecting individual work — use job_get or job_list for that.",
    "name": "orchestrator_status",
    "title": "Orchestrator status",
  },
]
`;

exports[`tools/list contract > matches the full profile snapshot 1`] = `
[
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Define a persistent local agent the orchestrator owns, prompts and runs. Use it when the same role is needed across many jobs; for a one-shot task pass a template to delegate instead. Register agents built by other vendors with agent_register, not this tool.",
    "name": "agent_create",
    "title": "Create a local agent",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List agents known to the orchestrator, local and remote together. Use it to discover what can be delegated to; use agent_get for one agent in full. Throwaway agents created by delegate are hidden unless includeEphemeral is set.",
    "name": "agent_list",
    "title": "List agents",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Fetch one agent with its configuration and recent jobs. Use it to inspect an agent before delegating to it or to see what it has been doing. Use agent_list to find the id first.",
    "name": "agent_get",
    "title": "Get an agent",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Patch a local agent configuration. Only future jobs see the change — jobs already submitted keep the snapshot they were created with, so a run in flight never shifts underneath itself.",
    "name": "agent_update",
    "title": "Update an agent",
  },
  {
    "annotations": {
      "destructiveHint": true,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Remove a local agent, or unregister a remote one. Refuses while the agent still has live jobs unless force is set, which cancels them first. Job history is kept either way.",
    "name": "agent_delete",
    "title": "Delete an agent",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Grant one named user read and delegate access to an agent you own — peer-to-peer sharing, private to exactly that grantee. Nothing is shared by default; this is separate from the admin-only shared flag on agent_create, which is visible to everyone. granteeId is that user’s ownerId (the OAuth subject, e.g. their Entra object id). Revoke with agent_unshare.",
    "name": "agent_share",
    "title": "Share an agent with one user",
  },
  {
    "annotations": {
      "destructiveHint": true,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Revoke a peer share created by agent_share. No-op if that grantee never had one.",
    "name": "agent_unshare",
    "title": "Revoke an agent share",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List the granteeIds a private agent has been shared with via agent_share.",
    "name": "agent_share_list",
    "title": "List who an agent is shared with",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List the built-in role templates that delegate and job_submit accept. Call this first when you want a one-shot agent and do not already have an agentId. Use agent_create to define a persistent agent of your own instead.",
    "name": "agent_template_list",
    "title": "List agent templates",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Create or overwrite a reusable role template that delegate and workflow steps can name. A saved template shadows a built-in of the same name. Use agent_create when you want one persistent agent rather than a reusable role.",
    "name": "agent_template_save",
    "title": "Save an agent template",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Queue work for an agent and return a handle immediately, without waiting for the result. Use it for long work, for fan-out you will collect later, or when the job depends on others finishing first; use delegate when you just want one answer now. Follow up with job_wait and job_get.",
    "name": "job_submit",
    "title": "Submit a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Fetch one job with its state, result and usage. The shape is identical whether the work ran locally or on a remote agent. Use job_wait first if the job may still be running, and events_query for the step-by-step trail.",
    "name": "job_get",
    "title": "Get a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List jobs filtered by state, agent or backend, newest first. Use it to survey what is queued or running; use job_get for one job in full. Paginate with the returned nextCursor.",
    "name": "job_list",
    "title": "List jobs",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Block until the given jobs finish, or until the timeout expires — at most 60 seconds per call. Call it again if the jobs are still running; it never blocks longer than the protocol allows. Use job_get when you only want the current state without waiting.",
    "name": "job_wait",
    "title": "Wait for jobs",
  },
  {
    "annotations": {
      "destructiveHint": true,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Cancel a queued or running job; for remote jobs this cancels the underlying A2A task too. Already-finished jobs are returned unchanged. Use job_retry to run a cancelled job again.",
    "name": "job_cancel",
    "title": "Cancel a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Re-queue a failed, cancelled or timed-out job, clearing the previous attempt result. Succeeded jobs cannot be retried — submit a new job instead. Check the failure with job_get before retrying, since a logic error will simply recur.",
    "name": "job_retry",
    "title": "Retry a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Send guidance to a job that is already running; the agent picks it up on its next turn via its message inbox. Only works while the job is live — use job_cancel and a fresh job_submit once it has finished.",
    "name": "job_steer",
    "title": "Steer a running job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": true,
      "readOnlyHint": false,
    },
    "description": "Run one instruction on the best-matching agent and return the result. This is the everyday tool: reach for it whenever you want a sub-agent to do something and hand the answer back. Use job_submit instead when the work is long, has dependencies, or should run in the background, and agent_template_list to see the roles you can target.",
    "name": "delegate",
    "title": "Delegate an instruction",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": true,
      "readOnlyHint": false,
    },
    "description": "Run the same instruction over many items in parallel, optionally reducing the results with a final step. Use it for per-file review, per-record extraction, or any map-style workload; use delegate for a single item. Concurrency is capped by the orchestrator and by any budget you set.",
    "name": "fan_out",
    "title": "Fan out over items",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": true,
      "readOnlyHint": false,
    },
    "description": "Put one question to several agents at once and aggregate their answers by vote or by a judge. Use it when a single answer is not trustworthy enough — cross-checking a risky call, or comparing agents from different vendors. Use delegate when one answer will do.",
    "name": "consensus",
    "title": "Ask several agents the same question",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": true,
      "readOnlyHint": false,
    },
    "description": "Turn a goal into a draft workflow spec using a planner agent. The draft is returned, never executed — review it, then pass it to workflow_define or workflow_start. Use delegate when you want the work done rather than planned.",
    "name": "plan_create",
    "title": "Draft a workflow plan",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Create or replace a named DAG of steps, validating references and rejecting cycles before anything runs. Use plan_create to draft one from a goal, and workflow_start to execute it. Re-defining an existing name replaces its spec; past runs keep the spec they started with.",
    "name": "workflow_define",
    "title": "Define a workflow",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List defined workflows. Use workflow_get for one spec in full, or workflow_run_list for runs.",
    "name": "workflow_list",
    "title": "List workflows",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Fetch one workflow spec by id. Use workflow_run_get for the state of a particular run.",
    "name": "workflow_get",
    "title": "Get a workflow",
  },
  {
    "annotations": {
      "destructiveHint": true,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Remove a workflow definition. Past runs stay in history and keep the spec they started with, so this never rewrites what already happened.",
    "name": "workflow_delete",
    "title": "Delete a workflow",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Start a run from a defined workflow or an inline spec, and return immediately with a run handle. Steps run as their dependencies complete. Poll with workflow_run_get; a step marked approval pauses the run until approval_resolve.",
    "name": "workflow_start",
    "title": "Start a workflow run",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Fetch per-step state and outputs for a run, including which job ran each step. Use it to poll progress; use events_query or approval_list when a run is stuck.",
    "name": "workflow_run_get",
    "title": "Get a workflow run",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List runs, optionally filtered by workflow or state. Use workflow_run_get for one run in full.",
    "name": "workflow_run_list",
    "title": "List workflow runs",
  },
  {
    "annotations": {
      "destructiveHint": true,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Pause, resume, cancel a run, or retry one failed step. Cancelling also cancels the jobs still running under it and cannot be undone — retry_step is the way to recover a single failure.",
    "name": "workflow_run_control",
    "title": "Control a workflow run",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Send a message to an agent, a channel or a running job. Use it for side-channel coordination between agents; use memory_write when the information should outlive the conversation.",
    "name": "message_send",
    "title": "Send a message",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Read an agent inbox, a channel, or the messages sent to a job. Reading does not mark anything read — that happens inside the agent loop.",
    "name": "message_list",
    "title": "List messages",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Create a topic channel for a team of agents, or return the existing one with that name. Use channel_list to see what already exists.",
    "name": "channel_create",
    "title": "Create a channel",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List the topic channels agents can post to. Use channel_create to add one.",
    "name": "channel_list",
    "title": "List channels",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Store a JSON value on the orchestrator-local blackboard so later jobs can read it. Use it to pass findings between agents; use artifact_put instead for large content. Remote A2A agents never see memory — put what they need in the job context.",
    "name": "memory_write",
    "title": "Write to shared memory",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Read one value from the blackboard by namespace and key. Returns found:false rather than an error when the key is absent or expired. Pass ownerId to read a namespace another user shared with you via memory_share — omit it to read your own. Use memory_search when you do not know the exact key.",
    "name": "memory_read",
    "title": "Read shared memory",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Full-text search the blackboard, optionally narrowed by namespace and tags. Use it to find what earlier agents recorded when you do not know the key. Pass ownerId and namespace together to search a namespace another user shared with you via memory_share; ownerId alone is not enough, since a grant is per namespace. Use memory_read for an exact lookup.",
    "name": "memory_search",
    "title": "Search shared memory",
  },
  {
    "annotations": {
      "destructiveHint": true,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Delete one key, every key under a prefix, or a whole namespace. Irreversible — prefer a ttlSec on memory_write when you just want entries to age out.",
    "name": "memory_delete",
    "title": "Delete from shared memory",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Grant one named user read access to every entry in one of your namespaces — peer-to-peer sharing, private to exactly that grantee. Nothing is shared by default. granteeId is that user’s ownerId (the OAuth subject, e.g. their Entra object id). The grantee reads it by passing your ownerId to memory_read/memory_search. Revoke with memory_unshare.",
    "name": "memory_share",
    "title": "Share a memory namespace with another user",
  },
  {
    "annotations": {
      "destructiveHint": true,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Revoke a peer share created by memory_share. No-op if that grantee never had one.",
    "name": "memory_unshare",
    "title": "Revoke a memory namespace share",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List the granteeIds one of your namespaces has been shared with via memory_share.",
    "name": "memory_share_list",
    "title": "List who a memory namespace is shared with",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Store content and get back an id, so large output never has to travel inline. Use it for files, reports and generated code; use memory_write for small structured values. Read it back with artifact_get.",
    "name": "artifact_put",
    "title": "Store an artifact",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Read an artifact by id, with offset and length for large content. Check eof to know whether more remains. Use artifact_list to find the id.",
    "name": "artifact_get",
    "title": "Read an artifact",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List stored artifacts, filtered by job, workflow run or tags. Metadata only — fetch content with artifact_get.",
    "name": "artifact_list",
    "title": "List artifacts",
  },
  {
    "annotations": {
      "destructiveHint": true,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Permanently delete an artifact. Irreversible, and any job that referenced it will no longer resolve the id.",
    "name": "artifact_delete",
    "title": "Delete an artifact",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List approval gates waiting on a human. Only a workflow step marked approval: true creates one today — a downstream tool marked requireApprovalFor fails the call outright rather than pausing for a human, and an unverified remote agent card is only ever allowed or blocked by A2A_TRUST_MODE, never gated here. Check this when a workflow run is paused. Resolve them with approval_resolve.",
    "name": "approval_list",
    "title": "List approvals",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Approve or reject a pending gate, optionally with a comment or edited input. Approving a paused workflow step resumes the run on the next tick. An approval can only be resolved once.",
    "name": "approval_resolve",
    "title": "Resolve an approval",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": true,
      "readOnlyHint": false,
    },
    "description": "Add an MCP server whose tools local agents may be granted, over stdio or HTTP. Grant them per agent with agent_create toolGrants ("server" for all its tools, "server/tool" for one). Remote A2A agents are opaque and never receive these — this never applies to them.",
    "name": "toolserver_register",
    "title": "Register a downstream MCP server",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": true,
      "readOnlyHint": true,
    },
    "description": "List registered MCP servers and whether each is reachable right now. Use toolserver_tools to see what one offers.",
    "name": "toolserver_list",
    "title": "List downstream MCP servers",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": true,
      "readOnlyHint": true,
    },
    "description": "List the tools a registered MCP server offers, after its allow and deny lists are applied. Use it to pick the exact grants for an agent before calling agent_create.",
    "name": "toolserver_tools",
    "title": "Inspect a server tools",
  },
  {
    "annotations": {
      "destructiveHint": true,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Remove a downstream MCP server and close its connection. Agents still granting its tools will simply stop seeing them on their next run.",
    "name": "toolserver_remove",
    "title": "Unregister an MCP server",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Read the append-only audit trail across both backends, filtered by job, agent, run or event type. Use it to explain what happened during a run; use job_get for the outcome alone. A non-admin caller must scope this to a jobId, agentId or runId they can see — there is no unscoped view of everyone’s events.",
    "name": "events_query",
    "title": "Query the event log",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Build a span tree for a job or workflow run from the event log, with timings and usage where the backend reported them. Use it to see where a run spent its time, or why it stalled; use events_query for the raw entries.",
    "name": "trace_get",
    "title": "Get a trace",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Summarize job counts, tokens and cost grouped by agent, model or backend. Remote agents show call counts and only whatever cost they self-report, since we cannot see their token usage. Use trace_get for one run in detail.",
    "name": "usage_report",
    "title": "Report usage",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Set a hard cap on spend for the whole orchestrator, one agent, or one job. Token and cost caps suit local agents; call-count and concurrency caps suit remote ones. Caps are enforced before each run starts, so work already running is never killed mid-flight.",
    "name": "budget_set",
    "title": "Set a budget",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Report orchestrator health, version, active tool profile, queue depth and schema state. Use it to confirm the server is reachable and correctly configured, or to check whether migrations are pending. Not for inspecting individual work — use job_get or job_list for that.",
    "name": "orchestrator_status",
    "title": "Orchestrator status",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List the local execution backends and whether each is usable right now, including missing credentials. Check this when a job fails with RUNNER_FAILED, or before creating an agent that names a specific runner. Remote A2A agents are not runners and never appear here.",
    "name": "runner_list",
    "title": "List runners",
  },
]
`;

exports[`tools/list contract > matches the standard profile snapshot 1`] = `
[
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Define a persistent local agent the orchestrator owns, prompts and runs. Use it when the same role is needed across many jobs; for a one-shot task pass a template to delegate instead. Register agents built by other vendors with agent_register, not this tool.",
    "name": "agent_create",
    "title": "Create a local agent",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List agents known to the orchestrator, local and remote together. Use it to discover what can be delegated to; use agent_get for one agent in full. Throwaway agents created by delegate are hidden unless includeEphemeral is set.",
    "name": "agent_list",
    "title": "List agents",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Fetch one agent with its configuration and recent jobs. Use it to inspect an agent before delegating to it or to see what it has been doing. Use agent_list to find the id first.",
    "name": "agent_get",
    "title": "Get an agent",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List the built-in role templates that delegate and job_submit accept. Call this first when you want a one-shot agent and do not already have an agentId. Use agent_create to define a persistent agent of your own instead.",
    "name": "agent_template_list",
    "title": "List agent templates",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Queue work for an agent and return a handle immediately, without waiting for the result. Use it for long work, for fan-out you will collect later, or when the job depends on others finishing first; use delegate when you just want one answer now. Follow up with job_wait and job_get.",
    "name": "job_submit",
    "title": "Submit a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Fetch one job with its state, result and usage. The shape is identical whether the work ran locally or on a remote agent. Use job_wait first if the job may still be running, and events_query for the step-by-step trail.",
    "name": "job_get",
    "title": "Get a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List jobs filtered by state, agent or backend, newest first. Use it to survey what is queued or running; use job_get for one job in full. Paginate with the returned nextCursor.",
    "name": "job_list",
    "title": "List jobs",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Block until the given jobs finish, or until the timeout expires — at most 60 seconds per call. Call it again if the jobs are still running; it never blocks longer than the protocol allows. Use job_get when you only want the current state without waiting.",
    "name": "job_wait",
    "title": "Wait for jobs",
  },
  {
    "annotations": {
      "destructiveHint": true,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Cancel a queued or running job; for remote jobs this cancels the underlying A2A task too. Already-finished jobs are returned unchanged. Use job_retry to run a cancelled job again.",
    "name": "job_cancel",
    "title": "Cancel a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Re-queue a failed, cancelled or timed-out job, clearing the previous attempt result. Succeeded jobs cannot be retried — submit a new job instead. Check the failure with job_get before retrying, since a logic error will simply recur.",
    "name": "job_retry",
    "title": "Retry a job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Send guidance to a job that is already running; the agent picks it up on its next turn via its message inbox. Only works while the job is live — use job_cancel and a fresh job_submit once it has finished.",
    "name": "job_steer",
    "title": "Steer a running job",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": true,
      "readOnlyHint": false,
    },
    "description": "Run one instruction on the best-matching agent and return the result. This is the everyday tool: reach for it whenever you want a sub-agent to do something and hand the answer back. Use job_submit instead when the work is long, has dependencies, or should run in the background, and agent_template_list to see the roles you can target.",
    "name": "delegate",
    "title": "Delegate an instruction",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": true,
      "readOnlyHint": false,
    },
    "description": "Run the same instruction over many items in parallel, optionally reducing the results with a final step. Use it for per-file review, per-record extraction, or any map-style workload; use delegate for a single item. Concurrency is capped by the orchestrator and by any budget you set.",
    "name": "fan_out",
    "title": "Fan out over items",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": true,
      "readOnlyHint": false,
    },
    "description": "Turn a goal into a draft workflow spec using a planner agent. The draft is returned, never executed — review it, then pass it to workflow_define or workflow_start. Use delegate when you want the work done rather than planned.",
    "name": "plan_create",
    "title": "Draft a workflow plan",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Create or replace a named DAG of steps, validating references and rejecting cycles before anything runs. Use plan_create to draft one from a goal, and workflow_start to execute it. Re-defining an existing name replaces its spec; past runs keep the spec they started with.",
    "name": "workflow_define",
    "title": "Define a workflow",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List defined workflows. Use workflow_get for one spec in full, or workflow_run_list for runs.",
    "name": "workflow_list",
    "title": "List workflows",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Fetch one workflow spec by id. Use workflow_run_get for the state of a particular run.",
    "name": "workflow_get",
    "title": "Get a workflow",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Start a run from a defined workflow or an inline spec, and return immediately with a run handle. Steps run as their dependencies complete. Poll with workflow_run_get; a step marked approval pauses the run until approval_resolve.",
    "name": "workflow_start",
    "title": "Start a workflow run",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Fetch per-step state and outputs for a run, including which job ran each step. Use it to poll progress; use events_query or approval_list when a run is stuck.",
    "name": "workflow_run_get",
    "title": "Get a workflow run",
  },
  {
    "annotations": {
      "destructiveHint": true,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Pause, resume, cancel a run, or retry one failed step. Cancelling also cancels the jobs still running under it and cannot be undone — retry_step is the way to recover a single failure.",
    "name": "workflow_run_control",
    "title": "Control a workflow run",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Store a JSON value on the orchestrator-local blackboard so later jobs can read it. Use it to pass findings between agents; use artifact_put instead for large content. Remote A2A agents never see memory — put what they need in the job context.",
    "name": "memory_write",
    "title": "Write to shared memory",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Read one value from the blackboard by namespace and key. Returns found:false rather than an error when the key is absent or expired. Pass ownerId to read a namespace another user shared with you via memory_share — omit it to read your own. Use memory_search when you do not know the exact key.",
    "name": "memory_read",
    "title": "Read shared memory",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Full-text search the blackboard, optionally narrowed by namespace and tags. Use it to find what earlier agents recorded when you do not know the key. Pass ownerId and namespace together to search a namespace another user shared with you via memory_share; ownerId alone is not enough, since a grant is per namespace. Use memory_read for an exact lookup.",
    "name": "memory_search",
    "title": "Search shared memory",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Store content and get back an id, so large output never has to travel inline. Use it for files, reports and generated code; use memory_write for small structured values. Read it back with artifact_get.",
    "name": "artifact_put",
    "title": "Store an artifact",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Read an artifact by id, with offset and length for large content. Check eof to know whether more remains. Use artifact_list to find the id.",
    "name": "artifact_get",
    "title": "Read an artifact",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List stored artifacts, filtered by job, workflow run or tags. Metadata only — fetch content with artifact_get.",
    "name": "artifact_list",
    "title": "List artifacts",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List approval gates waiting on a human. Only a workflow step marked approval: true creates one today — a downstream tool marked requireApprovalFor fails the call outright rather than pausing for a human, and an unverified remote agent card is only ever allowed or blocked by A2A_TRUST_MODE, never gated here. Check this when a workflow run is paused. Resolve them with approval_resolve.",
    "name": "approval_list",
    "title": "List approvals",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": false,
      "openWorldHint": false,
      "readOnlyHint": false,
    },
    "description": "Approve or reject a pending gate, optionally with a comment or edited input. Approving a paused workflow step resumes the run on the next tick. An approval can only be resolved once.",
    "name": "approval_resolve",
    "title": "Resolve an approval",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Read the append-only audit trail across both backends, filtered by job, agent, run or event type. Use it to explain what happened during a run; use job_get for the outcome alone. A non-admin caller must scope this to a jobId, agentId or runId they can see — there is no unscoped view of everyone’s events.",
    "name": "events_query",
    "title": "Query the event log",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Build a span tree for a job or workflow run from the event log, with timings and usage where the backend reported them. Use it to see where a run spent its time, or why it stalled; use events_query for the raw entries.",
    "name": "trace_get",
    "title": "Get a trace",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Summarize job counts, tokens and cost grouped by agent, model or backend. Remote agents show call counts and only whatever cost they self-report, since we cannot see their token usage. Use trace_get for one run in detail.",
    "name": "usage_report",
    "title": "Report usage",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "Report orchestrator health, version, active tool profile, queue depth and schema state. Use it to confirm the server is reachable and correctly configured, or to check whether migrations are pending. Not for inspecting individual work — use job_get or job_list for that.",
    "name": "orchestrator_status",
    "title": "Orchestrator status",
  },
  {
    "annotations": {
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false,
      "readOnlyHint": true,
    },
    "description": "List the local execution backends and whether each is usable right now, including missing credentials. Check this when a job fails with RUNNER_FAILED, or before creating an agent that names a specific runner. Remote A2A agents are not runners and never appear here.",
    "name": "runner_list",
    "title": "List runners",
  },
]
`;
